# visual_odometry

./: .gitignore  README.md  drive.py  drive_step.py  main.py  main.sh  paths.py  processing.py  pyproject.toml  requirements.txt  typings.py
src/vo/: __main__.py
src/vo/cli/: cli.py
src/vo/cv/: processing.py
src/vo/eval/: velocity.py
src/vo/kitti/: camera_data.py  oxts.py  parser.py
src/vo/util/: drive.py  drive_step.py  paths.py  processing.py
tests/kitti/: test_parser.py
