[project]
name = "vo"
version = "0.1.0"
dependencies = [
    "numpy==2.2.6",
    "opencv-python==4.13.0.92",
    "matplotlib==3.10.8",
    "pandas==2.3.3",
    "polars==1.40.0",
    "scipy==1.15.3",
    "PyYAML==6.0.3",
    "requests==2.33.1",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "ultralytics==8.4.39",
]

[tool.pytest.ini_options]
pythonpath = ["src"]